# base-fastapi-project

./: README.md
src/: Makefile  main.py  pyproject.toml
src/api/v1/: auth.py
src/core/: enums.py  exceptions.py
src/db/models/: __init__.py  answer.py  department.py  department_template.py  department_user.py  quarter.py  question.py  review.py  template.py  user.py
src/db/repositories/: answer.py  department.py  department_user.py  invitation_ticket.py  oauth_ticket.py  quarter.py  question.py  review.py  template.py  user.py
src/schemas/: answer.py
src/services/: auth.py
src/tests/: utils.py
src/tests/auth/test_integration/: test_get_token_by_ticket.py  test_invitation.py  test_sign_in.py  test_sign_out.py  test_sign_up.py
