[tool.poetry]
name = "base-fastapi-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
alembic = "^1.11.1"
inflection = "^0.5.1"
uvicorn = "^0.22.0"
pydantic = {extras = ["dotenv"], version = "^2.1.1"}
sqlalchemy = {extras = ["mypy"], version = "^2.0.15"}
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
httpx = "^0.24.1"
redis = "^4.6.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiofiles = "^23.1.0"
python-multipart = "^0.0.6"
loguru = "^0.7.0"
pydantic-settings = "^2.0.2"
authlib = "^1.2.1"
itsdangerous = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest-asyncio = "^0.21.0"
pytest-factoryboy = "^2.5.1"
types-redis = "^4.6.0.0"
bump-pydantic = "^0.6.1"
types-aiofiles = "^23.1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
